# TallerFinalSegmentacion

./: CMakeLists.txt  JSEG.cxx  JSEG.h  README.md
lib/: CMakeLists.txt  JSEG.cxx  JSEG.h  Region.cxx  Region.h
test/: CMakeLists.txt  test.cxx
